[package]
name = "intern-arc"
description = "An interner that deallocates unused values"
homepage = "https://github.com/Actyx/intern-arc"
version = "0.6.0"
authors = ["Actyx AG <developer@actyx.io>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/Actyx/intern-arc"
keywords = ["intern", "interner", "interning"]

[dependencies]
once_cell = { version = "1.17.1", features = ["parking_lot"] }
parking_lot = "0.12.1"

[profile.bench]
lto = false
debug = false # set to true when debugging sigsegv

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion = "0.4.0"
quickcheck = "1.0.3"

[target.'cfg(loom)'.dependencies]
loom = "0.5.6"

[features]
# turns on println debugging, useful when miri has found a problem
println = []
